--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,7 @@
-.PHONY: all clean test s21_decimal.a check rebuild open gcov_report
 CC=gcc
 CFLAGS=-Wall -Wextra -Werror -std=c11
-LINUX=-lsubunit -lrt -lpthread -lm
 LIBS=-lcheck
 LFLAGS=-fprofile-arcs -ftest-coverage
-OS=$(shell uname -s)
 
 all: clean s21_decimal.a test
 
@@ -16,23 +13,14 @@ s21_decimal.a: s21_decimal.o
 	ranlib ls21_decimal.a
 
 s21_decimal.o: s21_decimal.c
-	$(CC) -c s21_decimal.c -o s21_decimal.o
+	$(CC) $(CFLAGS) -c s21_decimal.c -o s21_decimal.o
 
 test: s21_decimal.a
-ifeq ($(OS), Darwin)
-	$(CC) test.c s21_decimal.a -o test.out $(LIBS)
+	$(CC) $(CFLAGS) test.c s21_decimal.a -o test.out $(LIBS)
 	./test.out
-else
-	$(CC) test.c s21_decimal.a -o test.out $(LIBS) $(LINUX)
-	./test.out
-endif
 
 gcov_report: s21_decimal.a
-ifeq ($(OS), Darwin)
 	$(CC) $(CFLAGS) $(LFLAGS) test.c s21_decimal.a -o test.out $(LIBS)
-else
-	$(CC) $(CFLAGS) $(LFLAGS) test.c s21_decimal.a -o test.out $(LIBS) $(LINUX)
-endif
 	./test.out
 	lcov -t "test" -o test.info -c -d .
 	genhtml -o report test.info
